# libprotobuf-mutator

./: .travis.yml  BUILD.bazel  CMakeLists.txt  MODULE.bazel  MODULES.bazel  README.md  addressbook.proto  field_instance.h  libfuzzer_protobuf_mutator.cc  libprotobuf-mutator.pc.in  protobuf_mutator.cc  protobuf_mutator.h  protobuf_mutator.proto  protobuf_mutator_test.cc  weighted_reservoir_sampler.h  weighted_reservoir_sampler_test.cc
.github/workflows/: cmake-multi-platform.yml
cmake/: CMakeLists.txt
examples/: CMakeLists.txt  fuzzer_test.h  libfuzzer.cc
examples/expat/: CMakeLists.txt  expat_example.cc  expat_example_test.cc
examples/libfuzzer/: CMakeLists.txt  libfuzzer_bin_example.cc  libfuzzer_example.cc  libfuzzer_example.proto  libfuzzer_example_test.cc
examples/libxml2/: CMakeLists.txt  libxml2_example.cc  libxml2_example_test.cc  proto_to_xml.cc  xml.proto  xml_writer.cc  xml_writer.h
examples/xml/: CMakeLists.txt  xml_mutator.cc  xml_mutator.h  xml_writer.cc  xml_writer.h
port/: protobuf.h  protobuf_text_format.h
src/: CMakeLists.txt  binary_format.cc  field_instance.h  libfuzzer_example.cc  libfuzzer_example_test.cc  libfuzzer_protobuf_mutator.cc  libfuzzer_protobuf_mutator.h  mutator.cc  mutator.h  mutator_test.cc  mutator_test_proto2.proto  mutator_test_proto3.proto  no_mutator_test.cc  protobuf_mutator.cc  protobuf_mutator.h  protobuf_mutator_test.cc  text_format.cc  utf8_fix.cc  utf8_fix_test.cc  weighted_reservoir_sampler.h  weighted_reservoir_sampler_test.cc
src/libfuzzer/: CMakeLists.txt  libfuzzer_macro.cc  libfuzzer_macro.h  libfuzzer_mutator.cc  libfuzzer_mutator.h  libfuzzer_protobuf_mutator.cc  libfuzzer_protobuf_mutator.h  libfuzzer_test.cc  mutator.cc  mutator.h
src/patches/: protobuf-29.3-0001-stop-building-protobuf-lite.patch  protobuf-29.3-0002-drop-everything-but-cxx.patch
src/port/: gtest.h  protobuf.h
src/xml/: CMakeLists.txt  libfuzzer_xml_mutator.cc  libfuzzer_xml_mutator.h  mutator.cc  mutator.h  proto_to_xml.cc  xml_converter.cc  xml_mutator.cc  xml_mutator.h  xml_writer.cc  xml_writer.h
